# pytest-alembic-experiments

./: .gitignore  .gitlab-ci.yml  LICENSE.md  README.md  alembic.ini  pyproject.toml
src/coke/: __main__.py  config.py  db.py  models.py
src/coke/alembic/: env.py
src/coke/alembic/versions/: 21daeed6a2a5_asset.py  21daeed6a2a5_foo.py  2a5898cfa787_position.py  c86b94ff772b_extensions.py  f59c5bd62842_asset_updated_at.py
src/pytest_alembic_exp/alembic/versions/: 21daeed6a2a5_foo.py
tests/: conftest.py  test_migrations.py
tests/pytest_alembic_exp/: test_main.py  test_migrations.py
