[tool.poetry]
name = "pytest-alembic-exp"
version = "0.1.0"
description = "Pytest-Alembic experiments"
authors = ["Felix Fennell <felnne@bas.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pytest_alembic_exp"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest-alembic = "^0.9.1"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
